--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -50,27 +50,33 @@
     will be used as the ensemble.
 
     \textbf{Results:}
-    We are able to reproduce FLANNEL and base models results using the updated
-    datasets. We were also able to reproduce patch-based classification using
-    X-ray images. We also created a segmentation network that can produce masks
-    of the lung contours for CXR images. We successfully used this segmentation
-    network to produce masks of the CXR images in the updated FLANNEL datasets.
+    We are able to reproduce FLANNEL with updated datasets. We created a
+    segmentation network that can produce masks of the lung contours for CXR images
+    and successfully used it to generate masked  CXR images of the updated FLANNEL
+    datasets.The FLANNEL base models were successfully to be patch-based
+    classifiers. The overall modifications resulted in similar performance of the
+    original FLANNEL architecture, where some areas improved while others decreased.
+
 
     \textbf{Discussion:}
     We saw improvement in metrics when training the base models and FLANNEL
     ensemble in detecting COVID-19 images. Since no parameters were changed, we
-    suspect that this is due to the increase of COVID-19 images for the dataset
-    in comparison to when the FLANNEL paper was written. We are in the process
-    of training the patch-based classifiers to use as the base models for the
-    ensemble.
+    suspect that this is due to the large increase of COVID-19 images for the
+    dataset in comparison to when the FLANNEL paper was written. When training
+    the patch-based models, we noticed that some patch-based models slightly
+    improved in performance while others slightly decreased but there were no
+    major differences.
 
     \textbf{Conclusion:}
-    With the success of performing segmentation on the dataset and the increased
-    performance of the original base models due to the increased dataset size,
-    we are hoping that this will lead to a further improvement once we finalize
-    the patch-based classifiers. Our optimism is due to the patch-based
-    classifiers outperforming their “global” counterparts that processed the
-    whole non-segmented image.
+    With the Patched FLANNEL barely outperforming FLANNEL in certain metrics, we
+    believe there is merit to conduct further research to determine if more
+    improvements can be made. Potential areas that can be further developed are
+    but not limited to; segmentation, data augmentation, changing number of
+    patches, changing size of patch and more. However, it should be noted that
+    the largest improvement in overall metrics when compared to the original
+    FLANNEL with the old dataset is due to the updated dataset having a large
+    increase in Covid-19 images. This highlights how crucial getting quality
+    data is to improve performance on models.
 
 \end{abstract}
 
@@ -140,6 +146,110 @@ the independent base models in the ensemble to be patch-based classifiers. We
 call this new architecture “Patched FLANNEL”. The network structure is shown in
 Figure \ref{fig:improve} and similar to FLANNEL consists of two stage approach.
 
+\subsection{Related Work}
+
+\subsubsection{FLANNEL for COVID-19 detection}
+
+FLANNEL model \cite{10.1093/jamia/ocaa280} is a classification model proposed
+for detection of COVID-19 from other pneumonia types and normal x-ray images. In
+this paper, Zhi Qiao \textit{et al.} has shown that with ensemble learning
+FLANNEL can detect and diagnose COVID-19 from pneumonia x-ray images with high
+accuracy, even when trained on only 100 available COVID-19 x-ray images.
+
+FLANNEL model introduces two stage classification, where first stage involves
+using state of the art CNN models to classify dataset into 4 classes: COVID,
+Pneumonia virus, Pneumonia bacteria, Normal. As train dataset is very small,
+pre-trained models using
+ImageNet\footnote{http://www.image-net.org/challenges/LSVRC/index} are utilized.
+Due to limited number of COVID-19 images, each model suffers from poor
+performance and high variance. In order to solve this issue, in stage-2 an
+ensemble method is proposed, where instead of traditional voting such as
+bagging\cite{combine}, a neural weight module is used is used to learn weights
+for all five predictions in Stage-1. For ensemble model training, instead of
+using cross-entropy loss, focal loss \cite{lin2018focal} is extended to handle
+multi-class classification. Focal loss function allows to down weight
+well-classified classes, so that model can focus on learning poorly classified
+classes.
+
+
+\subsubsection{COVID-19 classification using chest CT}
+
+X. Bai and Wang \cite{pmid32339081} were able to create an AI system that could
+differentiate COVID-19 and other pneumonia using a chest CT scan. They
+approached this as a classification problem and used the EfficientNet B4
+architecture which was a CNN based network. They were able to achieve results of
+96\% accuracy, 95\% sensitivity, 96\% specificity, and an area under receiver
+operating characteristic curve of 0.95 and an area under the precision recall
+curve of 0.90. When compared with radiologists on the same test dataset, the AI
+system performed better. This study concluded that the AI can support
+radiologists in detection of COVID-19 in Chest CT images.
+
+\subsubsection{Focal loss for dense object detection}
+
+Lin T, Goyal P, Girshick R propose Focal loss \cite{lin2018focal}, a
+modification to the standard cross entropy criterion that focuses weights for
+loss on hard examples versus well classified examples. This is accomplished by
+adding a factor $(1 - p_t)^\gamma$ to the standard cross entropy criterion where
+setting $\gamma  > 0$ reduces the relative loss for well-classified examples
+$(p_t > .5)$. This results in achieving higher accuracy than using the standard
+cross entropy loss and surpassed speed and accuracy when compared with state of
+the art two stage detectors; Faster R CNN Variants.
+
+
+\subsubsection{Ensemble Models}
+
+FLANNEL model applies ensemble approach to combine multiple base learners to get
+classification from each model. As shown by Larse Kai Hansen and Peter Salamon
+\cite{58871} compared to individual model, a better classification can be achieved
+by training an ensemble of neural networks on same data and then using a
+consensus scheme to decide the collective classification by vote.
+
+Modular ensemble models have also been shown to perform better and reduce
+training time in several researches \cite{combine}. It has been also shown to
+reduce model complexity and making the overall system easier to understand.
+
+\subsubsection{Deep learning COVID-19 features on CXR using limited training data sets}
+
+The authors of this paper \cite{pmid32396075}, proposed a patch-based
+convolutional neural network approach with a relatively small number of
+trainable parameters for COVID-19 diagnosis. The architecture contains first
+pre-processed data that are fed into a segmentation network [FC-DenseNet] to
+extract lung areas. From this segmented lung area, classification network is
+used to classify the corresponding diseases using a patch-by-patch training and
+inferences [ResNet-18 (pre-trained) and many ResNet-18 models are used for K
+        patches], final decision is made based on the majority voting from previous
+layers. A Grad-CAM saliency map is calculated to provide an interpretable
+result. This method has an accuracy of 91.9\%, compared to that of 92.4\% for
+COVID-Net.
+
+\subsubsection{COVID19-Net Deep Convolutional Neural Network}
+
+This is the first open source network design for COVID-19 detection from CXR images,
+our final research paper also considers this as its baseline for experiments.
+This paper considered COVIDx dataset which contains 13,975 CXR images for training and
+experiments. COVID-Net architecture makes heavy use of a lightweight residual
+‘projection expansion projection extension’ (PPEX) design pattern that contains multiple
+levels of convolution layers with fully connected layers and a softmax at the end.
+COVID-Net achieved higher test accuracy than other architectures such as VGG-19 and ResNet-50.
+
+\subsubsection{Noise-robust segmentation of COVID-19 from CT images}
+
+This is a CNN model \cite{wang2020covidnet} developed to be effective with
+detection of COVID-19 lesions from CT images that have a lot of noise. This
+paper discusses how Wang et al developed a novel noise-robust learning framework
+based on self-ensembling of CNNs.  To better deal with the complex lesions, a
+novel COVID-19 Pneumonia Lesion segmentation network (COPLE-Net) was proposed
+that uses a combination of max-pooling and average pooling to reduce information
+loss during downsampling, and employs bridge layers to alleviate the semantic
+gap between features in the encoder and decoder. Experimental results with CT
+images of 558 COVID-19 patients showed the effectiveness of the noise-robust
+Dice loss function, COPLE-Net and adaptive self-ensembling in learning from
+noisy labels for COVID-19 pneumonia lesion segmentation. To make the training
+process robust against noisy labels, a novel noise-robust Dice loss function was
+proposed and integrated into a self-ensembling framework, where an adaptive
+teacher and an adaptive student are introduced to further improve the
+performance in dealing with noisy labels.
+
 
 \section{Method}
 
@@ -192,12 +302,21 @@ stopping strategy was used based on the validation performance to prevent the
 model from overfitting.
 
 We then applied the trained FC-DenseNet103 segmentation model on the AP and PA
-CXR images from the Covid Chest X-ray and Kaggle X-ray datasets, this resulted
-in producing a mask for the lung contours for each of the images. We then split
-the segmented dataset using a train-test ratio of 4:1 to randomly generate train
-test splits. To ensure reporting accurate performance on the base models, we
-used five fold cross validation while training. The detailed statistics are
-shown in Table \ref{table:datastats}.
+CXR images from the Covid Chest X-ray and Kaggle X-ray datasets. The original
+inference script provided by Park et. al would produce two outputs, a numpified
+version of the CXR and a numpified version of the mask separating the lung
+contours. The numpified version of the mask is just 0s and 1s where the 1s
+represent the area of the lung contours.  We modified the inference script to
+apply the mask to the CXR by performing together by performing multiplication,
+we then saved the numpy compressed version of the masked CXR. This modification
+has two benefits, the first being that less disk space is used and the second
+being that our dataloader for the patch-based classifiers can improve
+performance since they no longer have to be responsible for applying the mask to
+the CXR as which was done by Park et. al. We then split the masked CXR dataset
+using a train-test ratio of 4:1 to randomly generate train test splits. To
+ensure reporting accurate performance on the base models, we used five fold
+cross validation while training. The detailed statistics are shown in Table 2
+\ref{table:datastats}.
 
 \subsection{Base model training}
 The next improvement that we produced was creating patch-based classifiers.
@@ -358,24 +477,40 @@ Here are our considerations discussed below -
     \caption{Performance comparison on F1 score: Class-specific F1 score is calculated using 1 class vs the rest strategy}
     \label{table:resultstats}
     \begin{tabular}{ |lccccc| } \hline
-                         & COVID-19      & Pneumonia virus & Pneumonia bacteria &
-        Normal           & Macro-F1                                                   \\ \hline
-        Original Base Learners    &               &                 &                    & 
-        & \\
-        Densenet161      & 0.7694 (0.03) & 0.5901 (0.05)   & 0.8030 (0.01)      &
-        0.8875 (0.02)    & 0.7625 (0.02)                                              \\
-        InceptionV3      & 0.8938 (0.01) & 0.6413 (0.03)   & 0.8112 (0.02)      &
-        0.9015 (0.03)    & 0.8120 (0.02)                                              \\
-        Resnet152        & 0.8302 (0.02) & 0.6218 (0.02)   & 0.8046 (0.01)      &
-        0.9080 (0.00)    & 0.7911 (0.01)                                              \\
-        ResNeXt101       & 0.8197 (0.03) & 0.6151 (0.04)   & 0.8016 (0.01)      &
-        0.9046 (0.01)    & 0.7852 (0.02)                                              \\
-        Vgg19\_bn        & 0.8753 (0.02) & 0.6023 (0.01)   & 0.8016 (0.01)      &
-        0.8950 (0.00)    & 0.7936 (0.00)                                              \\
-        FLANNEL\_OldData & 0.8168 (0.03) & 0.6063 (0.02)   & 0.8267 (0.00)      &
-        0.9144 (0.01)    & 0.7910 (0.01)                                              \\
-        Original FLANNEL          & 0.9239 (0.01) & 0.6675 (0.02)   & 0.8306 (0.01)      &
-        0.9322 (0.00)    & 0.8385 (0.01)                                              \\ \hline
+                                  & COVID-19      & Pneumonia virus & Pneumonia bacteria &
+        Normal                    & Macro-F1                                               \\ \hline
+        \textbf{Original FLANNEL} &               &                 &                    &
+                                  &                                                        \\
+        Densenet161               & 0.7694 (0.03) & 0.5901 (0.05)   & 0.8030 (0.01)      &
+        0.8875 (0.02)             & 0.7625 (0.02)                                          \\
+        InceptionV3               & 0.8938 (0.01) & 0.6413 (0.03)   & 0.8112 (0.02)      &
+        0.9015 (0.03)             & 0.8120 (0.02)                                          \\
+        Resnet152                 & 0.8302 (0.02) & 0.6218 (0.02)   & 0.8046 (0.01)      &
+        0.9080 (0.00)             & 0.7911 (0.01)                                          \\
+        ResNeXt101                & 0.8197 (0.03) & 0.6151 (0.04)   & 0.8016 (0.01)      &
+        0.9046 (0.01)             & 0.7852 (0.02)                                          \\
+        Vgg19\_bn                 & 0.8753 (0.02) & 0.6023 (0.01)   & 0.8016 (0.01)      &
+        0.8950 (0.00)             & 0.7936 (0.00)                                          \\
+
+        \textit{FLANNEL}                   & 0.9239 (0.01) & 0.6675 (0.02)   & 0.8306 (0.01)      &
+        0.9322 (0.00)             & 0.8385 (0.01)                                          \\ \hline
+        \textbf{Patched FLANNEL}  &               &                 &                    &
+                                  &                                                        \\
+        Densenet161               & 0.8994 (0.02) & 0.5815 (0.02)   & 0.8171 (0.01)      &
+        0.9195 (0.01)             & 0.8043 (0.01)                                          \\
+        InceptionV3               & 0.8974 (0.03) & 0.6161 (0.00)   & 0.8286 (0.00)      &
+        0.9351 (0.01)             & 0.8193 (0.01)                                          \\
+        Resnet152                 & 0.8738 (0.02) & 0.5527 (0.03)   & 0.8204 (0.00)      &
+        0.9133 (0.00)             & 0.7901 (0.01)                                          \\
+        ResNeXt101                & 0.8978 (0.01) & 0.5875 (0.01)   & 0.8215 (0.01)      &
+        0.9200 (0.01)             & 0.8067 (0.00)                                          \\
+        Vgg19\_bn                 & 0.8870 (0.03) & 0.5786 (0.03)   & 0.8201 (0.00)      &
+        0.9159 (0.01)             & 0.8004 (0.01)                                          \\
+
+        FLANNEL                   & 0.9121 (0.02) & 0.6009 (0.01)   & 0.8270 (0.01)      &
+        0.9319 (0.01)             & 0.8180 (0.01)                                          \\ \hline
+        \textbf{FLANNEL\_OldData} & 0.8168 (0.03) & 0.6063 (0.02)   & 0.8267 (0.00)      &
+        0.9144 (0.01)             & 0.7910 (0.01)                                          \\ \hline
     \end{tabular}\par
     \bigskip
     The values in parentheses are the standard deviations.
@@ -459,50 +594,60 @@ scores are better than when run with old dataset containing only 100 COVID-19 im
 \end{figure}
 
 
-\begin{figure*}
+\begin{figure}
     \centering
-    \begin{minipage}{0.45\textwidth}
-        \centering
-        \includegraphics[width=0.9\textwidth]{../doc/images/ensemble_comparison_precision_recall_curve.png}
-        \caption{first figure}
-    \end{minipage}
-    \begin{minipage}{0.45\textwidth}
-        \centering
-        \includegraphics[width=0.9\textwidth]{../doc/images/ensemble_comparison_roc_curve.png}
-        \caption{second figure}
-    \end{minipage}
 
-\end{figure*}
+    \includegraphics[width=8cm]{../doc/images/ensemble_comparison_precision_recall_curve.png}
+    \caption{first figure}
+    \label{fig:f2score}
+\end{figure}
 
-
-\begin{figure*}
+\begin{figure}
     \centering
-    \begin{minipage}{0.45\textwidth}
-        \centering
-        \includegraphics[width=0.9\textwidth]{../doc/images/ensemble_covid_19_comparison_precision_recall_curve.png}
-        \caption{second figure}
-    \end{minipage}
-    \begin{minipage}{0.45\textwidth}
-        \centering
-        \includegraphics[width=0.9\textwidth]{../doc/images/ensemble_covid_19_comparison_roc_curve.png}
-        \caption{first figure}
-    \end{minipage}
-\end{figure*}
+    \includegraphics[width=8cm]{../doc/images/ensemble_comparison_roc_curve.png}
+    \caption{second figure}
+\end{figure}
 
 
-\begin{figure*}
+\begin{figure}
     \centering
-    \begin{minipage}{0.45\textwidth}
-        \centering
-        \includegraphics[width=0.9\textwidth]{../doc/images/base_flannel_cf.png}
-        \caption{second figure}
-    \end{minipage}
-    \begin{minipage}{0.45\textwidth}
-        \centering
-        \includegraphics[width=0.9\textwidth]{../doc/images/patched_flannel_cf.png}
-        \caption{first figure}
-    \end{minipage}
-\end{figure*}
+
+    \centering
+    \includegraphics[width=8cm]{../doc/images/ensemble_covid_19_comparison_precision_recall_curve.png}
+    \caption{second figure}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=8cm]{../doc/images/ensemble_covid_19_comparison_roc_curve.png}
+    \caption{first figure}
+\end{figure}
+
+
+
+\begin{figure}
+    \centering
+
+    \centering
+    \includegraphics[width=8cm]{../doc/images/ensemble_covid_19_comparison_precision_recall_curve.png}
+    \caption{second figure}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=8cm]{../doc/images/ensemble_covid_19_comparison_roc_curve.png}
+    \caption{first figure}
+\end{figure}
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=8cm]{../doc/images/base_flannel_cf.png}
+    \caption{Original FLANNEL Confusion Matrix}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=8cm]{../doc/images/patched_flannel_cf.png}
+    \caption{Patched FLANNEL Confusion Matrix}
+\end{figure}
 
 % \begin{figure}[H]
 %     \includegraphics[width=8cm]{../doc/images/precision_recall_curve-2.png}
