--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -148,107 +148,50 @@ Figure \ref{fig:improve} and similar to FLANNEL consists of two stage approach.
 
 \subsection{Related Work}
 
-\subsubsection{FLANNEL for COVID-19 detection}
+Here we discuss some of the related works that are being carried out in this area on using deep learning techniques to detect COVID-19. Most of these works either used CXR or CT scans for patients to detect COVID-19. Our current research also falls in the same lines to accurately classify the patients CXR images to COVID-19 class or non COVID-19 classes. 
 
-FLANNEL model \cite{10.1093/jamia/ocaa280} is a classification model proposed
-for detection of COVID-19 from other pneumonia types and normal x-ray images. In
-this paper, Zhi Qiao \textit{et al.} has shown that with ensemble learning
-FLANNEL can detect and diagnose COVID-19 from pneumonia x-ray images with high
-accuracy, even when trained on only 100 available COVID-19 x-ray images.
+\subsubsection{AI-Covid}
 
-FLANNEL model introduces two stage classification, where first stage involves
-using state of the art CNN models to classify dataset into 4 classes: COVID,
-Pneumonia virus, Pneumonia bacteria, Normal. As train dataset is very small,
-pre-trained models using
-ImageNet\footnote{http://www.image-net.org/challenges/LSVRC/index} are utilized.
-Due to limited number of COVID-19 images, each model suffers from poor
-performance and high variance. In order to solve this issue, in stage-2 an
-ensemble method is proposed, where instead of traditional voting such as
-bagging\cite{combine}, a neural weight module is used is used to learn weights
-for all five predictions in Stage-1. For ensemble model training, instead of
-using cross-entropy loss, focal loss \cite{lin2018focal} is extended to handle
-multi-class classification. Focal loss function allows to down weight
-well-classified classes, so that model can focus on learning poorly classified
-classes.
+X. Bai and Wang were able to create an AI system [1] that could differentiate
+COVID-19 and other pneumonia using a chest CT scan. They approached this as a
+classification problem and used the EfficientNet B4 architecture which is a CNN.
+They were able to achieve results of 96% accuracy, 95% sensitivity , 96%
+specificity, and an area under receiver operating characteristic curve of 0.95
+and an area under the precision recall curve of 0.90. When compared with
+radiologists on the same test dataset, the AI system performed better. This
+study concluded that the AI can support radiologists in detection of Covid 19 in
+Chest CT images.
 
+\subsubsection{COVID-Net}
 
-\subsubsection{COVID-19 classification using chest CT}
-
-X. Bai and Wang \cite{pmid32339081} were able to create an AI system that could
-differentiate COVID-19 and other pneumonia using a chest CT scan. They
-approached this as a classification problem and used the EfficientNet B4
-architecture which was a CNN based network. They were able to achieve results of
-96\% accuracy, 95\% sensitivity, 96\% specificity, and an area under receiver
-operating characteristic curve of 0.95 and an area under the precision recall
-curve of 0.90. When compared with radiologists on the same test dataset, the AI
-system performed better. This study concluded that the AI can support
-radiologists in detection of COVID-19 in Chest CT images.
-
-\subsubsection{Focal loss for dense object detection}
-
-Lin T, Goyal P, Girshick R propose Focal loss \cite{lin2018focal}, a
-modification to the standard cross entropy criterion that focuses weights for
-loss on hard examples versus well classified examples. This is accomplished by
-adding a factor $(1 - p_t)^\gamma$ to the standard cross entropy criterion where
-setting $\gamma  > 0$ reduces the relative loss for well-classified examples
-$(p_t > .5)$. This results in achieving higher accuracy than using the standard
-cross entropy loss and surpassed speed and accuracy when compared with state of
-the art two stage detectors; Faster R CNN Variants.
-
-
-\subsubsection{Ensemble Models}
-
-FLANNEL model applies ensemble approach to combine multiple base learners to get
-classification from each model. As shown by Larse Kai Hansen and Peter Salamon
-\cite{58871} compared to individual model, a better classification can be achieved
-by training an ensemble of neural networks on same data and then using a
-consensus scheme to decide the collective classification by vote.
-
-Modular ensemble models have also been shown to perform better and reduce
-training time in several researches \cite{combine}. It has been also shown to
-reduce model complexity and making the overall system easier to understand.
-
-\subsubsection{Deep learning COVID-19 features on CXR using limited training data sets}
-
-The authors of this paper \cite{pmid32396075}, proposed a patch-based
-convolutional neural network approach with a relatively small number of
-trainable parameters for COVID-19 diagnosis. The architecture contains first
-pre-processed data that are fed into a segmentation network [FC-DenseNet] to
-extract lung areas. From this segmented lung area, classification network is
-used to classify the corresponding diseases using a patch-by-patch training and
-inferences [ResNet-18 (pre-trained) and many ResNet-18 models are used for K
-        patches], final decision is made based on the majority voting from previous
-layers. A Grad-CAM saliency map is calculated to provide an interpretable
-result. This method has an accuracy of 91.9\%, compared to that of 92.4\% for
-COVID-Net.
-
-\subsubsection{COVID19-Net Deep Convolutional Neural Network}
-
-This is the first open source network design for COVID-19 detection from CXR images,
-our final research paper also considers this as its baseline for experiments.
-This paper considered COVIDx dataset which contains 13,975 CXR images for training and
+Wang L, Qiu Z, Wang A, et al. are able to create COVID-Net [9] architecture by
+considering COVIDx dataset which contains 13,975 CXR images for training and
 experiments. COVID-Net architecture makes heavy use of a lightweight residual
-‘projection expansion projection extension’ (PPEX) design pattern that contains multiple
-levels of convolution layers with fully connected layers and a softmax at the end.
-COVID-Net achieved higher test accuracy than other architectures such as VGG-19 and ResNet-50.
+‘projection expansion projection extension’ (PPEX) design pattern that contains
+multiple levels of convolution layers with fully connected layers and a softmax
+at the end. COVID-Net achieved higher test accuracy than other architectures
+such as VGG-19 and ResNet-50.
 
-\subsubsection{Noise-robust segmentation of COVID-19 from CT images}
 
-This is a CNN model \cite{wang2020covidnet} developed to be effective with
-detection of COVID-19 lesions from CT images that have a lot of noise. This
-paper discusses how Wang et al developed a novel noise-robust learning framework
-based on self-ensembling of CNNs.  To better deal with the complex lesions, a
-novel COVID-19 Pneumonia Lesion segmentation network (COPLE-Net) was proposed
-that uses a combination of max-pooling and average pooling to reduce information
-loss during downsampling, and employs bridge layers to alleviate the semantic
-gap between features in the encoder and decoder. Experimental results with CT
-images of 558 COVID-19 patients showed the effectiveness of the noise-robust
-Dice loss function, COPLE-Net and adaptive self-ensembling in learning from
-noisy labels for COVID-19 pneumonia lesion segmentation. To make the training
-process robust against noisy labels, a novel noise-robust Dice loss function was
-proposed and integrated into a self-ensembling framework, where an adaptive
-teacher and an adaptive student are introduced to further improve the
-performance in dealing with noisy labels.
+
+\subsubsection{Noise Robust system for COVID-19 detection}
+
+Wang G, Liu X, Li C, et al. developed a CNN model which is very effective with
+detection of COVID-19 lesions from CT images that have a lot of noise [13]. This
+is a novel noise-robust learning framework based on self-ensembling of CNNs. To
+better deal with the complex lesions, a novel COVID-19 Pneumonia Lesion
+segmentation network (COPLE-Net) was proposed that uses a combination of
+max-pooling and average pooling to reduce information loss during downsampling,
+and employs bridge layers to alleviate the semantic gap between features in the
+encoder and decoder. Experimental results with CT images of 558 COVID-19
+patients showed the effectiveness of the noise-robust Dice loss function,
+COPLE-Net and adaptive self-ensembling in learning from noisy labels for
+COVID-19 pneumonia lesion segmentation. To make the training process robust
+against noisy labels, a novel noise-robust Dice loss function was proposed and
+integrated into a self-ensembling framework, where an adaptive teacher and an
+adaptive student are introduced to further improve the performance in dealing
+with noisy labels. 
+
 
 
 \section{Method}
@@ -266,7 +209,7 @@ Viral, Pneumonia Bacteria and COVID-19. The baseline we will be comparing
 against is the original FLANNEL architecture. We used the same datasets that
 were used in the FLANNEL paper, the COVID Chest X-ray Dataset
 \cite{cohen2020covidProspective} from
-\href{https://github.com/ieee8023/covid-chestxray-dataset}{GitHub} and the
+\href{https://github.com/ieee8023/covid-chestxray-dataset/tree/78543292f8b01d5e0ed1d0e15dce71949f0657bb}{GitHub} and the
 \href{https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia}{Kaggle
     Chest X-ray} images dataset. Similar to the FLANNEL paper, we also restricted
 the types of images used to anteroposterior (AP) or posteroanterior (PA). The
@@ -745,6 +688,7 @@ GitHub source code for both FLANNEL and Patch-by-Patch classification
 \end{itemize}
 
 TODO: Specify commit ID for COVID-xray data 78543292f8b01d5e0ed1d0e15dce71949f0657bb
+
 
 \clearpage
 %
